--- a/style.css
+++ b/style.css
@@ -9,14 +9,12 @@ body {
     color: #222;
 }
 
-/* Headings */
 h1, h2, h3, h4 {
     margin-top: 2rem;
     border-bottom: 1px solid #ddd;
     padding-bottom: 0.25em;
 }
 
-/* Tables */
 table {
     border-collapse: collapse;
     width: 100%;
@@ -29,14 +27,12 @@ th, td {
     text-align: left;
 }
 
-/* Markdown HR */
 hr {
     border: none;
     border-top: 1px dashed #aaa;
     margin: 2rem 0;
 }
 
-/* Blockquotes */
 blockquote {
     border-left: 5px solid #ccc;
     padding-left: 1em;
@@ -45,7 +41,6 @@ blockquote {
     color: #555;
 }
 
-/* Filter Controls */
 .filters {
     display: flex;
     flex-wrap: wrap;
@@ -62,24 +57,24 @@ blockquote {
     margin-right: 0.3rem;
 }
 
-/* Debug-style colour highlight based on rule_type */
 [data-rule-type="statutory"] {
-    background-color: rgba(0, 0, 255, 0.08);      /* Light Blue (actually Blue) */
+    background-color: rgba(0, 0, 255, 0.08);
     border-left: 5px solid #0000ff;
 }
 [data-rule-type="code_of_practice"] {
-    background-color: rgba(255, 0, 0, 0.08);      /* Magenta (shown as Red) */
+    background-color: rgba(255, 0, 0, 0.08);
     border-left: 5px solid #ff0000;
 }
 [data-rule-type="guidance"] {
-    background-color: rgba(0, 128, 0, 0.08);      /* Green */
+    background-color: rgba(0, 128, 0, 0.08);
     border-left: 5px solid #008000;
 }
 [data-rule-type="general_info"] {
-    background-color: rgba(70, 130, 180, 0.08);   /* Blue/Grey */
+    background-color: rgba(70, 130, 180, 0.08);
     border-left: 5px solid #4682b4;
 }
 [data-rule-type="always_show"] {
-    background-color: rgba(255, 255, 0, 0.1);     /* Yellow */
+    background-color: rgba(255, 255, 0, 0.2);
     border-left: 5px solid #cccc00;
 }
+
