--- a/style.css
+++ b/style.css
@@ -58,23 +58,37 @@ blockquote {
 }
 
 [data-rule-type="statutory"] {
-    background-color: rgba(0, 0, 255, 0.08);
+    background-color: rgba(0, 0, 255, 0.15);
     border-left: 5px solid #0000ff;
+    padding: 1rem;
+    margin-bottom: 1rem;
+    border-radius: 6px;
 }
 [data-rule-type="code_of_practice"] {
-    background-color: rgba(255, 0, 0, 0.08);
+    background-color: rgba(255, 0, 0, 0.15);
     border-left: 5px solid #ff0000;
+    padding: 1rem;
+    margin-bottom: 1rem;
+    border-radius: 6px;
 }
 [data-rule-type="guidance"] {
-    background-color: rgba(0, 128, 0, 0.08);
+    background-color: rgba(0, 128, 0, 0.15);
     border-left: 5px solid #008000;
+    padding: 1rem;
+    margin-bottom: 1rem;
+    border-radius: 6px;
 }
 [data-rule-type="general_info"] {
-    background-color: rgba(70, 130, 180, 0.08);
+    background-color: rgba(70, 130, 180, 0.15);
     border-left: 5px solid #4682b4;
+    padding: 1rem;
+    margin-bottom: 1rem;
+    border-radius: 6px;
 }
 [data-rule-type="always_show"] {
-    background-color: rgba(255, 255, 0, 0.2);
+    background-color: rgba(255, 255, 0, 0.3);
     border-left: 5px solid #cccc00;
+    padding: 1rem;
+    margin-bottom: 1rem;
+    border-radius: 6px;
 }
-
