--- a/style.css
+++ b/style.css
@@ -9,12 +9,14 @@ body {
     color: #222;
 }
 
+/* Headings */
 h1, h2, h3, h4 {
     margin-top: 2rem;
     border-bottom: 1px solid #ddd;
     padding-bottom: 0.25em;
 }
 
+/* Tables */
 table {
     border-collapse: collapse;
     width: 100%;
@@ -27,12 +29,14 @@ th, td {
     text-align: left;
 }
 
+/* Markdown HR */
 hr {
     border: none;
     border-top: 1px dashed #aaa;
     margin: 2rem 0;
 }
 
+/* Blockquotes */
 blockquote {
     border-left: 5px solid #ccc;
     padding-left: 1em;
@@ -41,6 +45,7 @@ blockquote {
     color: #555;
 }
 
+/* Filter Controls */
 .filters {
     display: flex;
     flex-wrap: wrap;
@@ -57,38 +62,40 @@ blockquote {
     margin-right: 0.3rem;
 }
 
-[data-rule-type="statutory"] {
-    background-color: rgba(0, 0, 255, 0.15);
-    border-left: 5px solid #0000ff;
-    padding: 1rem;
-    margin-bottom: 1rem;
-    border-radius: 6px;
+/* Clause block highlights by ruleType */
+section.clause {
+    padding: 1em;
+    margin: 1em 0;
+    border-left: 5px solid transparent;
+    background-color: #fff;
 }
-[data-rule-type="code_of_practice"] {
-    background-color: rgba(255, 0, 0, 0.15);
-    border-left: 5px solid #ff0000;
-    padding: 1rem;
-    margin-bottom: 1rem;
-    border-radius: 6px;
+
+/* Light Blue – statutory */
+[data-ruleType="statutory"] {
+    background-color: rgba(173, 216, 230, 0.25);
+    border-left-color: #00aaff;
 }
-[data-rule-type="guidance"] {
-    background-color: rgba(0, 128, 0, 0.15);
-    border-left: 5px solid #008000;
-    padding: 1rem;
-    margin-bottom: 1rem;
-    border-radius: 6px;
+
+/* Magenta (shown as red) – code_of_practice */
+[data-ruleType="code_of_practice"] {
+    background-color: rgba(255, 0, 128, 0.15);
+    border-left-color: #ff0080;
 }
-[data-rule-type="general_info"] {
-    background-color: rgba(70, 130, 180, 0.15);
-    border-left: 5px solid #4682b4;
-    padding: 1rem;
-    margin-bottom: 1rem;
-    border-radius: 6px;
+
+/* Green – guidance */
+[data-ruleType="guidance"] {
+    background-color: rgba(0, 128, 0, 0.12);
+    border-left-color: #008000;
 }
-[data-rule-type="always_show"] {
-    background-color: rgba(255, 255, 0, 0.3);
-    border-left: 5px solid #cccc00;
-    padding: 1rem;
-    margin-bottom: 1rem;
-    border-radius: 6px;
+
+/* Blue/Grey – general_info */
+[data-ruleType="general_info"] {
+    background-color: rgba(70, 130, 180, 0.12);
+    border-left-color: #4682b4;
+}
+
+/* Yellow – always_show */
+[data-ruleType="always_show"] {
+    background-color: rgba(255, 255, 0, 0.2);
+    border-left-color: #cccc00;
 }
